packages/cjs-to-esm/test/snapshots/package-corpus/core-js/es/error/to-string.js
import "../../modules/es.error.to-string";
import toString from "../../internals/error-to-string";
const _cjs_default = toString;
export default _cjs_default;
